src/test/compile-fail/tuple-expansion-generic.rs
// Copyright 2013 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

type Pair<T, U> = (T, U);
type MaybePair<T> = Pair<..T>; //~ ERROR wrong number of type arguments: expected 2 but found 1

fn main() {}
